--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-body            { font-family: sans-serif; background: #377ba8; }
+body            { font-family: sans-serif; background: #eeeeee; }
 a, h1, h2       { color: #377ba8; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
